8193214: Incorrect annotations.without.processors warnings with JDK 9
Reviewed-by: vromero